# mspp

./: .env_example  .env_local  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  backup_maker.bash  manage.py  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: deploy.yaml  prod_deploy.yaml  stage_deploy.yaml  stage_deploy.yml  stage_deploy_01.yaml  test.yaml
apps/bot/: models.py
config/: settings.py
infra/: docker-compose-stage.yaml  docker-compose-stage.yml  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose_db_launch.yml  docker-compose_image.yml  docker-compose_local.yml  nginx.conf  nginx_local.conf  swag_nginx.conf
infra/conf for localhost/: docker-compose.yml  nginx.conf
mspp/: asgi.py  settings.py  urls.py  wsgi.py
requirements/: development.txt  production.txt  requirements.txt
src/: Dockerfile  manage.py  start.sh
src/apps/bot/: admin.py  apps.py  bot.py  forms.py  handlers.py  logger.py  models.py  paginator.py  settings.py  urls.py  utils.py  views.py
src/apps/bot/migrations/: 0001_initial.py  0002_auto_20230204_1645.py  0002_coveragearea_alter_fund_options_and_more.py  0003_auto_20230204_1645.py  0003_remove_agelimit_unique age limit_and_more.py  (+1 more)
src/apps/core/: apps.py
src/apps/registration/: apps.py  urls.py  utils.py  views.py
src/config/: asgi.py  settings.py  urls.py  wsgi.py
src/static/js/: validation.js
src/templates/: base.html  registration.html  registration_new_fund.html  registration_new_user.html  validation.js
src/templates/includes/: name_field.html
(+25 files in other folders)
